refactor plot objective tests